background color change

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body { 
             font-family: sans-serif; 
-            background-color: #82858a;
+            background-color: #1e2125;
             color: #f0f0f0;
         }
         #controls {
