--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body { 
             font-family: sans-serif; 
-            background-color: #1e2125;
+            background-color: #23272c;
             color: #f0f0f0;
         }
         #controls {
@@ -23,7 +23,7 @@
         }
         .tech-node rect {
             fill: #3c424a;
-            stroke-width: 2px;
+            stroke-width: 4px;
         }
         .tech-node text {
             fill: #f0f0f0;
