--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stellaris Technology Tree</title>
+    <title>ST: New Horizons Tech Tree</title>
     <style>
         body { 
             font-family: sans-serif; 
@@ -53,7 +53,7 @@
 </head>
 <body>
     <div id="tooltip"></div>
-    <h1>Stellaris Technology Tree</h1>
+    <h1>Star Trek: New Horizons Technology Tree</h1>
     <div id="controls">
         <label for="species-select">Select Species:</label>
         <select id="species-select">
