added more layouts; added pre-render calc 66%

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
         <input type="text" id="search-input" placeholder="Enter tech name...">
         <button id="search-button">Search</button>
         <button id="reset-button">Reset View</button>
+        <label for="layout-select">Select Layout:</label>
+        <select id="layout-select">
+            <option value="force-directed">Force-directed</option>
+            <option value="disjoint-force-directed">Disjoint force-directed</option>
+            <option value="patent-suits">Patent Suits</option>
+        </select>
         <label for="start-tier-select">Start Tier:</label>
         <select id="start-tier-select">
             <option value="0">0</option>
