cookie & copy link feature

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <input type="text" id="search-input" placeholder="Enter tech name...">
         <button id="search-button">Search</button>
         <button id="reset-button">Reset View</button>
+        <button id="share-button">🔗 Link kopieren</button>
         <label for="layout-select">Select Layout:</label>
         <select id="layout-select">
             <option value="force-directed">Force-directed</option>
@@ -119,5 +120,9 @@
 
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="showcase.js"></script>
+    <script>
+        // Die gesamte Logik befindet sich jetzt in showcase.js, um die Ausführungsreihenfolge sicherzustellen.
+    </script>
+
 </body>
 </html>
