--- a/index.html
+++ b/index.html
@@ -4,28 +4,155 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ST: New Horizons Tech Tree</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <style>
-        body { 
-            font-family: sans-serif; 
-            background-color: #23272c;
-            color: #ffffff;
+        :root {
+            --primary: #3c80ff;
+            --secondary: #ffb400;
+            --society: #36d673;
+            --bg: #181c24;
+            --panel-bg: #23272c;
+            --border: #32404c;
+            --font: 'Roboto', Arial, sans-serif;
+            --shadow: 0 0 32px #000a, 0 1px 6px #0005;
         }
-        #controls {
-            margin-bottom: 10px;
+        body {
+            background: var(--bg);
+            color: #d6e3f2;
+            font-family: var(--font);
+            margin: 0;
+        }
+        header {
+            background: linear-gradient(90deg, #23272c 70%, #39424e 100%);
+            padding: 0 0 0 0;
+            border-bottom: 1px solid var(--border);
+            box-shadow: 0 4px 24px #0008;
+        }
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 28px;
+            padding: 16px 40px 12px 32px;
+        }
+        .header-content img {
+            height: 48px;
+        }
+        .header-content h1 {
+            margin: 0;
+            font-size: 2.1rem;
+            letter-spacing: 2px;
+            font-weight: 500;
         }
         #main-container {
             display: flex;
+            margin: 32px auto 0 auto;
+            max-width: 1800px;
+            gap: 32px;
+            min-height: 90vh;
         }
-        #info-panel {
-            width: 200px;
-            padding: 10px;
-            border: 1px solid #ccc;
+        #sidebar {
+            width: 290px;
+            background: var(--panel-bg);
+            border-radius: 18px;
+            box-shadow: var(--shadow);
+            padding: 28px 24px 24px 24px;
+            min-height: 600px;
+            margin-top: 0;
+        }
+        #sidebar h2 {
+            margin-top: 0;
+            margin-bottom: 18px;
+            font-size: 1.3rem;
+            letter-spacing: 1px;
+        }
+        #tech-counter {
+            font-size: 1.05rem;
+            margin-bottom: 26px;
+            padding: 6px 0 12px 0;
+            border-bottom: 1px solid #34405a;
+        }
+        .legend {
+            margin-bottom: 32px;
+            margin-top: 10px;
+        }
+        .legend-row {
+            margin-bottom: 9px;
+            display: flex; align-items: center;
+            font-size: 1rem;
+        }
+        .legend-bullet {
+            display: inline-block;
+            width: 20px; height: 20px;
+            border-radius: 6px;
             margin-right: 10px;
         }
-        #tech-tree { 
-            flex-grow: 1;
-            height: 800px; 
-            border: 1px solid #ccc; 
+        .physics { background: var(--primary); }
+        .engineering { background: var(--secondary); }
+        .society { background: var(--society); }
+        #filters label {
+            display: block;
+            margin-top: 18px;
+            margin-bottom: 4px;
+            font-size: 1rem;
+        }
+        #filters select, #filters input[type="text"] {
+            width: 100%;
+            padding: 8px 10px;
+            background: #232b3d;
+            color: #eaf2ff;
+            border: 1px solid #2a3451;
+            border-radius: 8px;
+            margin-bottom: 10px;
+            font-size: 1rem;
+            font-family: var(--font);
+        }
+        #tree-panel {
+            flex: 1;
+            background: var(--panel-bg);
+            border-radius: 20px;
+            box-shadow: var(--shadow);
+            padding: 26px 22px 26px 22px;
+            position: relative;
+            min-width: 900px;
+        }
+        #tree-toolbar {
+            margin-bottom: 18px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 12px;
+            align-items: center;
+        }
+        #tree-toolbar label {
+            font-size: 1rem;
+            margin-right: 2px;
+        }
+        #tree-toolbar select, #tree-toolbar input[type="text"], #tree-toolbar button {
+            background: #232b3d;
+            color: #eaf2ff;
+            border: 1px solid #3c80ff88;
+            border-radius: 8px;
+            padding: 7px 14px;
+            font-size: 1rem;
+            font-family: var(--font);
+            margin-right: 6px;
+            transition: background 0.15s, border 0.15s;
+        }
+        #tree-toolbar button {
+            cursor: pointer;
+            font-weight: 500;
+        }
+        #tree-toolbar button:hover, #tree-toolbar select:focus, #tree-toolbar input:focus {
+            background: #3c4b7a;
+            border-color: #3c80ff;
+        }
+        #tech-tree {
+            width: 100%;
+            height: 800px;
+            border-radius: 14px;
+            border: 1.5px solid #293040;
+            background: linear-gradient(120deg, #23272c 85%, #223449 100%);
+            box-shadow: 0 0 16px #0009;
+            margin-top: 8px;
         }
         .tech-node {
             cursor: pointer;
@@ -35,94 +162,115 @@
             stroke-width: 4px;
         }
         .tech-node text {
-            fill: #ffffff;
+            fill: #dddddd;
             font-size: 10px;
         }
         #tooltip {
             position: absolute;
             display: none;
-            background-color: #292e34;
-            border: 1px solid #ccc;
-            padding: 10px;
-            border-radius: 5px;
-            color: #f0f0f0;
-            font-size: 12px;
-            pointer-events: none; /* So the tooltip doesn't interfere with mouse events */
+            background-color: #1a1e27f9;
+            border: 1.5px solid #3c80ff88;
+            padding: 14px 18px;
+            border-radius: 11px;
+            color: #dddddd;
+            font-size: 1rem;
+            z-index: 50;
+            pointer-events: none;
+            max-width: 340px;
+            box-shadow: 0 2px 12px #0009;
+        }
+        @media (max-width: 1300px) {
+            #main-container { flex-direction: column; gap: 0; }
+            #sidebar { margin-bottom: 32px; min-height: unset; }
+            #tree-panel { min-width: unset; }
+        }
+        @media (max-width: 800px) {
+            .header-content { flex-direction: column; gap: 10px; padding: 12px 10px; }
+            #main-container { padding: 0 2vw; }
+            #sidebar, #tree-panel { padding: 10px 2vw; }
+            #tree-panel { min-width: unset; }
         }
     </style>
 </head>
 <body>
-    <div id="tooltip"></div>
-    <h1>Star Trek: New Horizons Technology Tree</h1>
-    <div id="controls">
-        <label for="species-select">Select Species:</label>
-        <select id="species-select">
-            <option value="all">All</option>
-        </select>
-        <label for="area-select">Select Area:</label>
-        <select id="area-select">
-            <option value="all">All</option>
-            <option value="physics">Physics</option>
-            <option value="society">Society</option>
-            <option value="engineering">Engineering</option>
-        </select>
-        <label for="search-input">Search:</label>
-        <input type="text" id="search-input" placeholder="Enter tech name...">
-        <button id="search-button">Search</button>
-        <button id="reset-button">Reset View</button>
-        <button id="share-button">🔗 Link kopieren</button>
-        <label for="layout-select">Select Layout:</label>
-        <select id="layout-select">
-            <option value="force-directed">Force-directed</option>
-            <option value="disjoint-force-directed">Disjoint force-directed</option>
-            <option value="patent-suits">Patent Suits</option>
-        </select>
-        <label for="start-tier-select">Start Tier:</label>
-        <select id="start-tier-select">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-        </select>
-        <label for="end-tier-select">End Tier:</label>
-        <select id="end-tier-select">
-            <option value="0">0</option>
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-        </select>
-        <button id="show-tier-button">Show Tier Range</button>
-    </div>
-    <div id="main-container">
-        <div id="info-panel">
-            <h3>Information</h3>
-            <div id="tech-counter">Displayed Technologies: 0</div>
+    <header>
+        <div class="header-content">
+            <h1>Star Trek: New Horizons Technology Tree</h1>
         </div>
-        <div id="tech-tree"></div>
+    </header>
+    <div id="main-container">
+        <aside id="sidebar">
+            <h2>Information</h2>
+            <div id="tech-counter">Displayed Technologies: 0</div>
+            <div class="legend">
+                <div class="legend-row"><span class="legend-bullet physics"></span> Physics</div>
+                <div class="legend-row"><span class="legend-bullet engineering"></span> Engineering</div>
+                <div class="legend-row"><span class="legend-bullet society"></span> Society</div>
+            </div>
+            <div id="filters">
+                <label for="species-select">Select Species:</label>
+                <select id="species-select">
+                    <option value="all">All</option>
+                </select>
+                <label for="area-select">Select Area:</label>
+                <select id="area-select">
+                    <option value="all">All</option>
+                    <option value="physics">Physics</option>
+                    <option value="society">Society</option>
+                    <option value="engineering">Engineering</option>
+                </select>
+                <label for="search-input">Search:</label>
+                <input type="text" id="search-input" placeholder="Enter tech name...">
+            </div>
+        </aside>
+        <main id="tree-panel">
+            <div id="tree-toolbar">
+                <button id="search-button">Search</button>
+                <button id="reset-button">Reset View</button>
+                <button id="share-button">🔗 Link kopieren</button>
+                <label for="layout-select">Layout:</label>
+                <select id="layout-select">
+                    <option value="force-directed">Force-directed</option>
+                    <option value="disjoint-force-directed">Disjoint force-directed</option>
+                    <option value="patent-suits">Patent Suits</option>
+                </select>
+                <label for="start-tier-select">Tier:</label>
+                <select id="start-tier-select">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                </select>
+                <label for="end-tier-select">to</label>
+                <select id="end-tier-select">
+                    <option value="0">0</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    <option value="11">11</option>
+                </select>
+                <button id="show-tier-button">Show Tier Range</button>
+            </div>
+            <div id="tech-tree"></div>
+        </main>
     </div>
-    <div class="tooltip" id="tooltip" style="display:none;position:absolute;"></div>
-
+    <div id="tooltip"></div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="showcase.js"></script>
-    <script>
-        // Die gesamte Logik befindet sich jetzt in showcase.js, um die Ausführungsreihenfolge sicherzustellen.
-    </script>
-
 </body>
 </html>
