--- a/index.html
+++ b/index.html
@@ -283,12 +283,13 @@
             <div id="tree-toolbar">
                 <button id="search-button">Search</button>
                 <button id="reset-button">Reset View</button>
+                <button id="back-button" style="display: none;">< Back</button>
+                <button id="forward-button" style="display: none;">Forward ></button>
                 <button id="share-button">🔗 Link kopieren</button>
                 <label for="layout-select">Layout:</label>
                 <select id="layout-select">
                     <option value="force-directed">Force-directed</option>
                     <option value="disjoint-force-directed">Disjoint force-directed</option>
-                    <option value="patent-suits">Patent Suits</option>
                 </select>
                 <label for="start-tier-select">Tier:</label>
                 <select id="start-tier-select">
