add new layout with arrows

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
                 <label for="layout-select">Layout:</label>
                 <select id="layout-select">
                     <option value="force-directed">Force-directed</option>
+                    <option value="force-directed-arrows">Force-directed Arrows</option>
                     <option value="disjoint-force-directed">Disjoint force-directed</option>
                 </select>
                 <label for="start-tier-select">Tier:</label>
