delay techtree render until load button

--- a/index.html
+++ b/index.html
@@ -445,6 +445,7 @@
                     <option value="11">11</option>
                 </select>
                 <button id="show-tier-button">Show Tier Range</button>
+                <button id="load-tree-button">Load Tech Tree</button>
             </div>
             <div id="landing-card">
                 <div class="landing-content">
