updating landing card

--- a/index.html
+++ b/index.html
@@ -450,21 +450,22 @@
             <div id="landing-card">
                 <div class="landing-content">
     <h2>Welcome to the Star Trek: New Horizons Tech Tree!</h2>
-        <ul style="text-align: left; max-width: 500px; margin: 18px auto 0 auto; font-size: 1.07rem;">
+    <p>An interactive tool to explore the technologies of the ST:NH mod.</p>
+    <ul style="text-align: left; max-width: 500px; margin: 18px auto 0 auto; font-size: 1.07rem; padding-left: 20px;">
         <li>
-            Use the filters (species, area, level range) or search to quickly find technologies or explore the tree.
+            <b>Explore the Tree:</b> Use filters, search, or simply pan and zoom to navigate the entire tech tree.
         </li>
         <li>
-            Click any technology to view its branch in detail.
+            <b>Branch Inspection:</b> Click any technology to focus on its specific dependency branch. Use the new <b>Back/Forward buttons</b> to navigate your history.
         </li>
         <li>
-            Right-click on a node to see its dependencies and the path between them.
+            <b>Path Analysis:</b> Right-click a technology to select it as a start point, and right-click another to set an end point. Then, render the direct path or all prerequisites in a focused popup view.
         </li>
         <li>
-            Share your current view with others using the <b>Copy Link</b> button.
+            <b>Share Your View:</b> Use the "Copy Link" button to generate a shareable URL that saves your current filters, layout, and even a focused technology or calculated path.
         </li>
         <li>
-            The info panel on the left is now draggable! You can move it around the screen.
+            <b>Customizable UI:</b> Choose from multiple layouts (including one with dependency arrows) and drag the control panel anywhere on the screen.
         </li>
     </ul>
     <div style="background: #c8373722; border: 1px solid #c8373788; border-radius: 8px; padding: 13px 16px 11px 16px; margin-top: 22px; color: #ffc4c4; font-size: 1rem;">
