--- a/index.html
+++ b/index.html
@@ -176,6 +176,53 @@
             background: #3c4b7a;
             border-color: #3c80ff;
         }
+        .search-options {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 12px;
+            margin-bottom: 8px;
+        }
+        .switch {
+            position: relative;
+            display: inline-block;
+            width: 50px;
+            height: 24px;
+        }
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+        .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-color: #232b3d;
+            transition: .4s;
+            border-radius: 24px;
+            border: 1px solid #2a3451;
+        }
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 16px;
+            width: 16px;
+            left: 4px;
+            bottom: 3px;
+            background-color: white;
+            transition: .4s;
+            border-radius: 50%;
+        }
+        input:checked + .slider {
+            background-color: var(--primary);
+        }
+        input:checked + .slider:before {
+            transform: translateX(26px);
+        }
         #tree-panel {
             flex: 1;
             background: var(--panel-bg);
@@ -377,11 +424,11 @@
                         <div class="legend-row"><span class="legend-bullet society"></span> Society</div>
                     </div>
                     <div id="filters">
-                        <label for="species-select">Select Species:</label>
+                        <label for="species-select">Select Empire:</label>
                         <select id="species-select">
                             <option value="all">All</option>
                         </select>
-                        <label for="area-select">Select Area:</label>
+                        <label for="area-select">Select Research Branch:</label>
                         <select id="area-select">
                             <option value="all">All</option>
                             <option value="physics">Physics</option>
@@ -390,7 +437,15 @@
                         </select>
                         <label for="search-input">Search:</label>
                         <input type="text" id="search-input" placeholder="Enter tech name...">
+                        <div class="search-options">
+                            <label for="search-scope-toggle" style="margin: 0;">Search All Techs</label>
+                            <label class="switch">
+                                <input type="checkbox" id="search-scope-toggle">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
                         <button id="search-button">Search</button>
+                        <button id="search-back-button" style="display: none; margin-top: 8px;">Return to Previous View</button>
                     </div>
                 </div>
                 <div id="details-panel">
@@ -403,11 +458,11 @@
         </aside>
         <main id="tree-panel">
             <div id="tree-toolbar">
-                <button id="reset-button">Reset View</button>
+                <button id="reset-button">Reload Page</button>
                 <button id="back-button" style="display: none;">< Back</button>
                 <button id="forward-button" style="display: none;">Forward ></button>
-                <button id="share-button">🔗 Copy Link</button>
-                <button id="render-path-button" style="display: none;">Render Path</button>
+                <button id="share-button">Copy/Share URL</button>
+                <button id="render-path-button" style="display: none;">Show Tech Path</button>
                 <label for="layout-select">Layout:</label>
                 <select id="layout-select">
                     <option value="force-directed">Force-directed</option>
