exclusive species toggle

--- a/index.html
+++ b/index.html
@@ -428,6 +428,13 @@
                         <select id="species-select">
                             <option value="all">All</option>
                         </select>
+                        <div class="search-options" style="margin-top: 8px; margin-bottom: 8px;">
+                            <label for="species-exclusive-toggle" style="margin: 0;">Exclusive</label>
+                            <label class="switch">
+                                <input type="checkbox" id="species-exclusive-toggle">
+                                <span class="slider"></span>
+                            </label>
+                        </div>
                         <label for="area-select">Select Research Branch:</label>
                         <select id="area-select">
                             <option value="all">All</option>
