added "Performance Mode" button to toggle LOD

--- a/index.html
+++ b/index.html
@@ -539,6 +539,11 @@
                     <option value="force-directed-arrows">Force-directed Arrows</option>
                     <option value="disjoint-force-directed">Disjoint force-directed</option>
                 </select>
+                <label for="performance-toggle" style="margin: 0;">Performance mode</label>
+                <label class="switch">
+                    <input type="checkbox" id="performance-toggle" checked>
+                    <span class="slider"></span>
+                </label>
                 <button id="load-tree-button">Load Tech Tree</button>
             </div>
             <div id="landing-card">
